--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 body {
   background-color: black;
   color: white;
+  font-family: monospace;
 }
 .leaflet-container {
   margin-top: 70px;
-  width: 100vw;
+  width: 98vw;
   height: 30vw;
 }
 .leaflet-div-icon2 {
